@@ -7,6 +7,11 @@ Version 0.6.8.2                             "Say 'what' again"
                apt-get compatible syntax ("aptitude install
                gnome-desktop^").
 
+  * [cmdline]: Do not assume that APT::Default-Release always provides
+               the candidate version of a package, instead use the
+               policy defined by apt_preferences(5).
+               (Closes: #587775, #631464, #686316)
+
 - Documentation:
 
   * Update for default value of APT::AutoRemove::SuggestsImportant
